--- a/tasks.json
+++ b/tasks.json
@@ -1,6 +1,19 @@
 {
   "tasks": [
-    { "id": 1, "title": "Aprender React", "completed": false },
-    { "id": 2, "title": "Usar APIs REST", "completed": true }
+    {
+      "id": "1",
+      "title": "Aprender React",
+      "completed": false
+    },
+    {
+      "id": "3",
+      "title": "Usar APIs REST2",
+      "completed": true
+    },
+    {
+      "id": "5",
+      "title": "Usar APIs REST4",
+      "completed": true
+    }
   ]
 }
